feature(add-new-admin):add route to register new admin [Finish #167162635]
